# snarkOS

./: .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  README.md  build.rs  build_ubuntu.sh  devnet.sh  run-prover.sh  run-validator.sh  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.ci/: bench_bft_sync.sh  bench_cdn_sync.sh  bench_p2p_sync.sh  db_backup_ci.sh  devnet_ci.sh  generate_ledger.sh  utils.sh
.circleci/: config.yml  db_backup_ci.sh  devnet_ci.sh
.devnet/: install.sh  reinstall.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: benchmarks.yml  release.yml
.integration/: Cargo.toml
.integration/src/: lib.rs
.resources/: license_header
account/: Cargo.toml
account/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs
cli/src/commands/: _ledger.rs  account.rs  clean.rs  genesis.rs  ledger.rs  mod.rs  start.rs  update.rs
cli/src/commands/account/: sign.rs
cli/src/commands/developer/: decrypt.rs  deploy.rs  execute.rs  mod.rs  query.rs  scan.rs  transfer_private.rs
cli/src/commands/developer/query/: transaction.rs
cli/src/commands/ledger/: mod.rs  util.rs
cli/src/helpers/: args.rs  bech32m.rs  dev.rs  dynamic_format.rs  log_writer.rs  logger.rs  mod.rs  static_query.rs  updater.rs  ureq.rs
cli/tests/: e2e.rs
display/: Cargo.toml
display/src/: lib.rs  tabs.rs
display/src/pages/: logs.rs  mod.rs  overview.rs
examples/: genesis.rs
node/: Cargo.toml
node/bft/: Cargo.toml
node/bft/events/: Cargo.toml
node/bft/events/src/: batch_certified.rs  batch_propose.rs  batch_signature.rs  block_request.rs  block_response.rs  certificate_request.rs  certificate_response.rs  challenge_request.rs  challenge_response.rs  disconnect.rs  lib.rs  primary_ping.rs  transmission_request.rs  transmission_response.rs  validators_request.rs  validators_response.rs  worker_ping.rs
node/bft/events/src/helpers/: codec.rs  mod.rs
node/bft/examples/: monitor.rs  simple_node.rs
node/bft/ledger-service/: Cargo.toml
node/bft/ledger-service/src/: ledger.rs  lib.rs  mock.rs  prover.rs  traits.rs  translucent.rs
node/bft/src/: bft.rs  gateway.rs  lib.rs  primary.rs  worker.rs
node/bft/src/helpers/: cache.rs  channels.rs  dag.rs  mod.rs  partition.rs  pending.rs  proposal.rs  proposal_cache.rs  ready.rs  resolver.rs  signed_proposals.rs  storage.rs  telemetry.rs  timestamp.rs  transmission_checks.rs
node/bft/src/sync/: mod.rs
node/bft/storage-service/: Cargo.toml
node/bft/storage-service/src/: lib.rs  memory.rs  persistent.rs  traits.rs
node/bft/tests/: bft_e2e.rs  gateway_e2e.rs  narwhal_e2e.rs
node/bft/tests/common/: mod.rs  primary.rs  test_peer.rs  utils.rs
node/bft/tests/components/: mod.rs  pending.rs  worker.rs
node/cdn/: Cargo.toml
node/cdn/src/: blocks.rs  lib.rs
node/consensus/: Cargo.toml  README.md
node/consensus/src/: lib.rs  transactions_queue.rs
node/metrics/: Cargo.toml
node/metrics/src/: lib.rs  names.rs
node/rest/: Cargo.toml
node/rest/src/: lib.rs  routes.rs  version.rs
node/rest/src/helpers/: auth.rs  error.rs  mod.rs
node/router/: Cargo.toml
node/router/messages/: Cargo.toml
node/router/messages/src/: block_request.rs  block_response.rs  challenge_request.rs  challenge_response.rs  disconnect.rs  lib.rs  peer_request.rs  peer_response.rs  ping.rs  pong.rs  puzzle_request.rs  puzzle_response.rs  unconfirmed_solution.rs  unconfirmed_transaction.rs
node/router/messages/src/helpers/: codec.rs  disconnect.rs  mod.rs  node_type.rs
node/router/src/: handshake.rs  heartbeat.rs  inbound.rs  lib.rs  outbound.rs  routing.rs  writing.rs
node/router/src/helpers/: cache.rs  mod.rs  peer.rs  resolver.rs
node/router/tests/: cleanups.rs  connect.rs  disconnect.rs  heartbeat.rs
node/router/tests/common/: mod.rs  router.rs
node/src/: lib.rs  node.rs  traits.rs
node/src/client/: mod.rs  router.rs
node/src/prover/: mod.rs  router.rs
node/src/validator/: mod.rs  router.rs
node/sync/: Cargo.toml
node/sync/communication-service/: Cargo.toml
node/sync/communication-service/src/: lib.rs
node/sync/locators/: Cargo.toml  README.md
node/sync/locators/src/: block_locators.rs  lib.rs
node/sync/src/: block_sync.rs  lib.rs  ping.rs
node/sync/src/block_sync/: helpers.rs  metrics.rs  sync_state.rs
node/sync/src/helpers/: mod.rs
node/tcp/: Cargo.toml
node/tcp/src/: lib.rs  tcp.rs
node/tcp/src/helpers/: banned_peers.rs  config.rs  connections.rs  known_peers.rs  mod.rs  stats.rs
node/tcp/src/protocols/: disconnect.rs  handshake.rs  mod.rs  on_connect.rs  reading.rs  writing.rs
node/tests/: disconnect.rs  handshake.rs  peering.rs
node/tests/common/: mod.rs  node.rs  test_peer.rs
scripts/: build_ledger.sh  client.sh  prover.sh  tx_cannon.sh  tx_cannon_append.sh  validator.sh
snarkos/: config.rs  main.rs
