[package]
name = "snarkos"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.83.0" # Attention - Change the MSRV in rust-toolchain and in .circleci/config.yml as well

[workspace]
members = [
  "account",
  "cli",
  "display",
  "node",
  "node/bft",
  "node/bft/events",
  "node/bft/ledger-service",
  "node/bft/storage-service",
  "node/cdn",
  "node/consensus",
  "node/metrics",
  "node/rest",
  "node/router",
  "node/router/messages",
  "node/sync",
  "node/sync/communication-service",
  "node/sync/locators",
  "node/tcp"
]

[workspace.dependencies.aleo-std]
version = "1.0.1"
default-features = false

[workspace.dependencies.snarkvm] # If this is updated, the rev in `node/rest/Cargo.toml` must be updated as well.
#path = "../snarkVM"
git = "https://github.com/ProvableHQ/snarkVM.git"
rev = "c194f3e"
#version = "=3.8.0"
default-features = false
#features = [ "circuit", "console", "rocks" ]

[workspace.dependencies.anyhow]
version = "1.0"

[workspace.dependencies.clap]
version = "4.4"
default-features = false
features = [ "std" ]

[workspace.dependencies.crossterm]
version = "0.29"

[workspace.dependencies.futures]
version = "0.3"

[workspace.dependencies.proptest]
version = "=1.6.0" # Remove this once we upgrade to rand 0.9

[workspace.dependencies.base64]
version = "0.22"

[workspace.dependencies.tokio]
version = "1.28"

[workspace.dependencies.tokio-util]
version = "0.7"

[workspace.dependencies.itertools]
version = "0.14"

[workspace.dependencies.indexmap]
version = "2"
default-features = false

[workspace.dependencies.tracing]
version = "0.1"
default-features = false

[workspace.dependencies.tracing-test]
version = "0.2"

[workspace.dependencies.tracing-subscriber]
version = "0.3"

[workspace.dependencies.test-strategy]
version = "0.4"

[workspace.dependencies.snarkos-node-consensus]
path = "node/consensus"
version = "=3.8.0"

[workspace.dependencies.snarkos-node-cdn]
path = "node/cdn"
version = "=3.8.0"

[workspace.dependencies.snarkos-node-router]
path = "./node/router"
version = "=3.8.0"

[[bin]]
name = "snarkos"
path = "snarkos/main.rs"

[features]
default = [ "snarkos-cli/metrics", "snarkos-node-metrics", "snarkos-node/metrics", "snarkos-node-cdn/metrics" ]
history = [ "snarkos-node/history" ]
telemetry = [ "snarkos-node/telemetry" ]
cuda = [
  "snarkos-account/cuda",
  "snarkos-cli/cuda",
  "snarkos-node/cuda",
  "snarkos-node-bft/cuda",
  "snarkos-node-cdn/cuda",
  "snarkos-node-consensus/cuda",
  "snarkos-node-rest/cuda",
  "snarkos-node-router/cuda",
  "snarkos-node-sync/cuda"
]
locktick = [
  "dep:locktick",
  "dep:tracing",
  "snarkos-node/locktick",
  "snarkos-node-bft/locktick",
  "snarkos-node-consensus/locktick",
  "snarkos-node-metrics/locktick",
  "snarkos-node-rest/locktick",
  "snarkos-node-router/locktick",
  "snarkos-node-sync/locktick",
  "snarkos-node-tcp/locktick"
]
test_network = [ "snarkos-cli/test_network" ]

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true
features = [ "derive" ]

[dependencies.locktick]
version = "0.3"
optional = true

[dependencies.snarkos-account]
path = "./account"
version = "=3.8.0"

[dependencies.snarkos-cli]
path = "./cli"
version = "=3.8.0"

[dependencies.snarkos-node]
path = "./node"
version = "=3.8.0"

[dependencies.snarkos-node-bft]
path = "./node/bft"
version = "=3.8.0"

[dependencies.snarkos-node-cdn]
workspace = true

[dependencies.snarkos-node-consensus]
workspace = true

[dependencies.snarkos-node-metrics]
path = "./node/metrics"
version = "=3.8.0"
optional = true

[dependencies.snarkos-node-router]
workspace = true

[dependencies.snarkos-node-rest]
path = "./node/rest"
version = "=3.8.0"

[dependencies.snarkos-node-sync]
path = "./node/sync"
version = "=3.8.0"

[dependencies.snarkos-node-tcp]
path = "./node/tcp"
version = "=3.8.0"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.5"

[dependencies.tracing]
workspace = true
optional = true

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.built]
version = "0.8"
features = [ "git2" ]

[build-dependencies.toml]
version = "0.8"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
# uncomment the 2 lines below when building with the locktick feature
# debug = "line-tables-only"
# strip = "none"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "off"
incremental = true

[profile.test]
opt-level = 2
lto = "thin"
incremental = true
debug = true
debug-assertions = true

[package.metadata.cargo-machete]
ignored = [
  "snarkos-account", # Needed for cuda feature
  "snarkos-node", # Needed for metrics feature
  "snarkos-node-bft", # Needed for cuda and locktick features
  "snarkos-node-cdn", # Needed for cuda and locktick features
  "snarkos-node-consensus", # Needed for cuda and locktick features
  "snarkos-node-tcp", # Needed for locktick feature
  "snarkos-node-rest", # Needed for cuda and locktick features
  "snarkos-node-sync", # Needed for cuda and locktick features
  "snarkos-node-router", # Needed for cuda and locktick features
  "snarkos-node-metrics", # Needed for locktick feature
]
