[package]
name = "snarkos-cli"
version = "3.7.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A CLI for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[features]
locktick = [
  "dep:locktick",
  "snarkos-node/locktick",
  "snarkos-node-cdn/locktick",
  "snarkos-node-rest/locktick",
  "snarkvm/locktick"
]
metrics = [ "dep:metrics", "snarkos-node/metrics" ]
cuda = [
  "snarkvm/cuda",
  "snarkos-account/cuda",
  "snarkos-node/cuda",
  "snarkos-node-cdn/cuda",
  "snarkos-node-rest/cuda"
]
test_network = [ 
  "snarkvm/test_targets", 
  "snarkvm/test_consensus_heights" 
]

[dependencies.aleo-std]
workspace = true

[dependencies.anstyle]
version = "1"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.clap]
version = "4.4"
features = [ "derive", "color", "unstable-styles" ]

[dependencies.colored]
version = "2"

[dependencies.crossterm]
version = "0.27"

[dependencies.indexmap]
version = "2.1"
features = [ "serde", "rayon" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../node/metrics"
version = "=3.7.1"
optional = true

[dependencies.num_cpus]
version = "1"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.rayon]
version = "1"

[dependencies.self_update]
version = "0.41"
features = [ "archive-zip", "compression-zip-deflate" ]

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dependencies.snarkos-account]
path = "../account"
version = "=3.7.1"

[dependencies.snarkos-display]
path = "../display"
version = "=3.7.1"

[dependencies.snarkos-node]
path = "../node"
version = "=3.7.1"

[dependencies.snarkos-node-cdn]
path = "../node/cdn"
version = "=3.7.1"

[dependencies.snarkos-node-rest]
path = "../node/rest"
version = "=3.7.1"

[dependencies.snarkvm]
workspace = true

[dependencies.sys-info]
version = "0.9"

[dependencies.tempfile]
version = "3"

[dependencies.time]
version = "0.3"

[dependencies.thiserror]
version = "2.0.11"

[dependencies.tokio]
version = "1.28"
features = [ "rt" ]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter" ]

[dependencies.ureq]
version = "2.9"

[dependencies.zeroize]
version = "1"
features = [ "derive" ]

[target."cfg(target_family = \"unix\")".dependencies.nix]
version = "0.26"
