[package]
name = "snarkos-cli"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Command-line interface for snarkOS"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
locktick = [
  "dep:locktick",
  "snarkos-node/locktick",
  "snarkos-node-cdn/locktick",
  "snarkos-node-rest/locktick",
  "snarkvm/locktick"
]
metrics = [ "dep:snarkos-node-metrics", "snarkos-node/metrics" ]
cuda = [
  "snarkvm/cuda",
  "snarkos-account/cuda",
  "snarkos-node/cuda",
  "snarkos-node-cdn/cuda",
  "snarkos-node-rest/cuda"
]
test_network = [ 
  "snarkvm/test_targets", 
  "snarkvm/test_consensus_heights" 
]
serial = [ ]

[dependencies.aleo-std]
workspace = true

[dependencies.anstyle]
version = "1"

[dependencies.anyhow]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.clap]
workspace = true
features = [ "derive", "color", "unstable-styles", "help", "cargo", "usage", "suggestions" ]

[dependencies.colored]
version = "3"

[dependencies.crossterm]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
workspace = true
features = [ "parking_lot" ]
optional = true

[dependencies.snarkos-node-metrics]
workspace = true
optional = true

[dependencies.num_cpus]
version = "1"

[dependencies.parking_lot]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rand_chacha]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.self_update]
version = "0.42"
features = [ "archive-zip", "compression-zip-deflate" ]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dependencies.snarkos-account]
workspace = true

[dependencies.snarkos-display]
workspace = true

[dependencies.snarkos-node]
workspace = true

[dependencies.snarkos-node-cdn]
workspace = true

[dependencies.snarkos-node-rest]
workspace = true

[dependencies.snarkvm]
workspace = true
features = [ "parameters", "circuit", "package" ]

[dependencies.sys-info]
version = "0.9"

[dependencies.tempfile]
version = "3"

[dependencies.time]
workspace = true

[dependencies.thiserror]
version = "2.0.11"

[dependencies.tokio]
workspace = true
features = [ "rt" ]

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = [ "env-filter" ]

[dependencies.ureq]
version = "2.9"
features = ["json"]
default-features = true

[dependencies.zeroize]
version = "1"
features = [ "derive" ]

#TODO remove this once we upgrade to Rust 1.85 or above
[dependencies.base64ct]
version = "=1.7"

[target."cfg(target_family = \"unix\")".dependencies.nix]
version = "0.30"
default-features = false
features = [ "resource" ]

[package.metadata.cargo-machete]
ignored = [
  "base64ct", # needed to force a version compatible with Rust 1.82
]
