[package]
name = "snarkos-cli"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Command-line interface for snarkOS"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
locktick = [
  "dep:locktick",
  "snarkos-node/locktick",
  "snarkos-node-cdn/locktick",
  "snarkos-node-rest/locktick",
  "snarkvm/locktick"
]
metrics = [ "dep:metrics", "snarkos-node/metrics" ]
cuda = [
  "snarkvm/cuda",
  "snarkos-account/cuda",
  "snarkos-node/cuda",
  "snarkos-node-cdn/cuda",
  "snarkos-node-rest/cuda"
]
test_network = [ 
  "snarkvm/test_targets", 
  "snarkvm/test_consensus_heights" 
]
serial = [ ]

[dependencies.aleo-std]
workspace = true

[dependencies.anstyle]
version = "1"

[dependencies.anyhow]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.clap]
workspace = true
features = [ "derive", "color", "unstable-styles", "help", "cargo", "usage", "suggestions" ]

[dependencies.colored]
version = "3"

[dependencies.crossterm]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../node/metrics"
version = "=4.0.1"
optional = true

[dependencies.num_cpus]
version = "1"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.rayon]
version = "1"

[dependencies.self_update]
version = "0.42"
features = [ "archive-zip", "compression-zip-deflate" ]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dependencies.snarkos-account]
path = "../account"
version = "=4.0.1"

[dependencies.snarkos-display]
path = "../display"
version = "=4.0.1"

[dependencies.snarkos-node]
path = "../node"
version = "=4.0.1"

[dependencies.snarkos-node-cdn]
path = "../node/cdn"
version = "=4.0.1"

[dependencies.snarkos-node-rest]
path = "../node/rest"
version = "=4.0.1"

[dependencies.snarkvm]
workspace = true
features = [ "parameters", "circuit", "package" ]

[dependencies.sys-info]
version = "0.9"

[dependencies.tempfile]
version = "3"

[dependencies.time]
version = "0.3"

[dependencies.thiserror]
version = "2.0.11"

[dependencies.tokio]
workspace = true
features = [ "rt" ]

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = [ "env-filter" ]

[dependencies.ureq]
version = "2.9"
features = ["json"]
default-features = true

[dependencies.zeroize]
version = "1"
features = [ "derive" ]

#TODO remove this once we upgrade to Rust 1.85 or above
[dependencies.base64ct]
version = "=1.7"

[target."cfg(target_family = \"unix\")".dependencies.nix]
version = "0.30"
default-features = false
features = [ "resource" ]

[package.metadata.cargo-machete]
ignored = [
  "base64ct", # needed to force a version compatible with Rust 1.82
]
