[package]
name = "snarkos-display"
version = "4.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A display for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.anyhow]
workspace = true

[dependencies.crossterm]
workspace = true

[dependencies.ratatui]
version = "0.29"

[dependencies.snarkos-node]
path = "../node"
version = "=4.0.0"

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "rt" ]
