[package]
name = "snarkos-node"
version = "3.7.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ "parallel" ]
parallel = [ ] #TODO(kaimast): is this still used?
timer = [ "aleo-std/timer" ]
locktick = [
  "dep:locktick",
  "snarkos-node-bft/locktick",
  "snarkos-node-cdn/locktick",
  "snarkos-node-consensus/locktick",
  "snarkos-node-rest/locktick",
  "snarkos-node-router/locktick",
  "snarkos-node-sync/locktick",
  "snarkos-node-tcp/locktick",
  "snarkvm/locktick"
]
metrics = [
  "snarkos-node-bft/metrics",
  "snarkos-node-consensus/metrics",
  "snarkos-node-router/metrics",
  "snarkos-node-tcp/metrics"
]
history = [ "snarkos-node-rest/history" ]
telemetry = [ "snarkos-node-bft/telemetry", "snarkos-node-rest/telemetry" ]
cuda = [
  "snarkvm/cuda",
  "snarkos-account/cuda",
  "snarkos-node-bft/cuda",
  "snarkos-node-cdn/cuda",
  "snarkos-node-consensus/cuda",
  "snarkos-node-rest/cuda",
  "snarkos-node-router/cuda",
  "snarkos-node-sync/cuda"
]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
version = "1.0.79"

[dependencies.async-trait]
version = "0.1"

[dependencies.colored]
version = "2"

[dependencies.futures-util]
version = "0.3"
features = [ "sink" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.lru]
version = "0.12.1"

[dependencies.num_cpus]
version = "1"

[dependencies.once_cell]
version = "1"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dependencies.snarkos-account]
path = "../account"
version = "=3.7.1"

[dependencies.snarkos-node-bft]
path = "./bft"
version = "=3.7.1"

[dependencies.snarkos-node-cdn]
path = "./cdn"
version = "=3.7.1"

[dependencies.snarkos-node-consensus]
path = "./consensus"
version = "=3.7.1"

[dependencies.snarkos-node-rest]
path = "./rest"
version = "=3.7.1"

[dependencies.snarkos-node-router]
path = "./router"
version = "=3.7.1"

[dependencies.snarkos-node-sync]
path = "./sync"
version = "=3.7.1"

[dependencies.snarkos-node-tcp]
path = "./tcp"
version = "=3.7.1"

[dependencies.snarkvm]
workspace = true

[dependencies.time]
version = "0.3"

[dependencies.tokio]
version = "1.28"
features = [ "rt", "signal" ]

[dependencies.tokio-util]
version = "0.7"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.deadline]
version = "0.2"

[dev-dependencies.paste]
version = "1"

[dev-dependencies.pea2pea]
version = "0.49"

[dev-dependencies.snarkos-node-router]
path = "./router"
features = [ "test" ]

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "fmt" ]

[dev-dependencies.rand_chacha]
version = "0.3.0"

[package.metadata.cargo-machete]
ignored = [
  "serde_json", # Need to set preserve_order feature
]
