[package]
name = "snarkos-node-bft"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A memory pool for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
telemetry = [ ]
locktick = [
  "dep:locktick",
  "snarkos-node-bft-ledger-service/locktick",
  "snarkos-node-bft-storage-service/locktick",
  "snarkos-node-sync/locktick",
  "snarkos-node-tcp/locktick",
  "snarkvm/locktick"
]
metrics = [
  "dep:metrics",
  "snarkos-node-bft-events/metrics",
  "snarkos-node-bft-ledger-service/metrics"
]
cuda = [
  "snarkvm/cuda",
  "snarkos-account/cuda",
  "snarkos-node-bft-ledger-service/cuda",
  "snarkos-node-sync/cuda"
]
test = [
  # "snarkvm/test" this breaks some of the tests
  "snarkvm/test-helpers",
  "snarkos-node-bft-ledger-service/test",
  "snarkos-node-bft-storage-service/test"
]
serial = [ "snarkos-node-bft-ledger-service/serial" ]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.async-recursion]
version = "1.0"

[dependencies.async-trait]
version = "0.1"

[dependencies.bytes]
version = "1"

[dependencies.colored]
version = "2"

[dependencies.futures]
workspace = true
features = [ "thread-pool" ]

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot", "tokio" ]
optional = true

[dependencies.lru]
version = "0.12.1"

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../metrics"
version = "=4.0.1"
optional = true

[dependencies.parking_lot]
workspace = true

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.snarkos-account]
path = "../../account"
version = "=4.0.1"

[dependencies.snarkos-node-bft-events]
path = "./events"
version = "=4.0.1"

[dependencies.snarkos-node-bft-ledger-service]
workspace = true
features = [ "ledger", "prover" ]

[dependencies.snarkos-node-bft-storage-service]
workspace = true
features = [ "memory" ]

[dependencies.snarkos-node-sync]
workspace = true

[dependencies.snarkos-node-tcp]
path = "../tcp"
version = "=4.0.1"

[dependencies.snarkvm]
workspace = true
features = [ "utilities" ]

[dependencies.time]
version = "0.3"

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread", "signal" ]

[dependencies.tokio-stream]
version = "=0.1"

[dependencies.tokio-util]
workspace = true
features = [ "codec" ]

[dependencies.tracing]
workspace = true

[dev-dependencies.axum]
version = "0.8"

[dev-dependencies.axum-extra]
version = "0.10"
default-features = false
features = [ "erased-json" ]

[dev-dependencies.clap]
workspace = true
features = [ "derive" ]

[dev-dependencies.deadline]
version = "0.2"

[dev-dependencies.itertools]
version = "0.12"

[dev-dependencies.open]
version = "5"

[dev-dependencies.paste]
version = "1"

[dev-dependencies.pea2pea]
version = "0.49"

[dev-dependencies.proptest]
workspace = true

[dev-dependencies.rand_chacha]
version = "0.3"

[dev-dependencies.rand_distr]
version = "0.4"

[dev-dependencies.rayon]
version = "1"

[dev-dependencies.snarkos-node-bft]
path = "."
features = [ "test" ]

[dev-dependencies.snarkos-node-sync]
path = "../sync"
features = [ "test" ]

[dev-dependencies.test-strategy]
workspace = true

[dev-dependencies.tower-http]
version = "0.6"
features = [ "fs", "trace" ]

[dev-dependencies.tracing-subscriber]
workspace = true
features = [ "env-filter" ]

[dev-dependencies.tracing-test]
workspace = true

[dev-dependencies.mockall]
version = "0.12.1"
