[package]
name = "snarkos-node-bft"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A memory pool for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
telemetry = [ ]
locktick = [
  "dep:locktick",
  "snarkos-node-bft-ledger-service/locktick",
  "snarkos-node-bft-storage-service/locktick",
  "snarkos-node-sync/locktick",
  "snarkos-node-tcp/locktick",
  "snarkvm/locktick"
]
metrics = [
  "dep:snarkos-node-metrics",
  "snarkos-node-bft-events/metrics",
  "snarkos-node-bft-ledger-service/metrics"
]
cuda = [
  "snarkvm/cuda",
  "snarkos-account/cuda",
  "snarkos-node-bft-ledger-service/cuda",
  "snarkos-node-sync/cuda"
]
test = [
  # "snarkvm/test" this breaks some of the tests
  "snarkvm/test-helpers",
  "snarkos-node-bft-ledger-service/test",
  "snarkos-node-bft-storage-service/test"
]
serial = [ "snarkos-node-bft-ledger-service/serial" ]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.async-recursion]
version = "1.0"

[dependencies.async-trait]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.colored]
version = "2"

[dependencies.futures]
workspace = true
features = [ "thread-pool" ]

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
workspace = true
features = [ "parking_lot", "tokio" ]
optional = true

[dependencies.lru]
workspace = true

[dependencies.snarkos-node-metrics]
workspace = true
optional = true

[dependencies.parking_lot]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.snarkos-account]
workspace = true

[dependencies.snarkos-node-bft-events]
workspace = true

[dependencies.snarkos-node-bft-ledger-service]
workspace = true
features = [ "ledger", "prover" ]

[dependencies.snarkos-node-bft-storage-service]
workspace = true
features = [ "memory" ]

[dependencies.snarkos-node-sync]
workspace = true

[dependencies.snarkos-node-tcp]
workspace = true

[dependencies.snarkvm]
workspace = true
features = [ "utilities" ]

[dependencies.time]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread", "signal" ]

[dependencies.tokio-stream]
version = "=0.1"

[dependencies.tokio-util]
workspace = true
features = [ "codec" ]

[dependencies.tracing]
workspace = true

[dev-dependencies.axum]
workspace = true

[dev-dependencies.axum-extra]
workspace = true
features = [ "erased-json" ]

[dev-dependencies.clap]
workspace = true
features = [ "derive" ]

[dev-dependencies.deadline]
version = "0.2"

[dev-dependencies.itertools]
version = "0.12"

[dev-dependencies.open]
version = "5"

[dev-dependencies.paste]
version = "1"

[dev-dependencies.pea2pea]
version = "0.49"

[dev-dependencies.proptest]
workspace = true

[dev-dependencies.rand_chacha]
workspace = true

[dev-dependencies.rand_distr]
workspace = true

[dev-dependencies.rayon]
workspace = true

[dev-dependencies.snarkos-node-bft]
workspace = true
features = [ "test" ]

[dev-dependencies.snarkos-node-sync]
workspace = true
features = [ "test" ]

[dev-dependencies.test-strategy]
workspace = true

[dev-dependencies.tower-http]
version = "0.6"
features = [ "fs", "trace" ]

[dev-dependencies.tracing-subscriber]
workspace = true
features = [ "env-filter" ]

[dev-dependencies.tracing-test]
workspace = true

[dev-dependencies.mockall]
version = "0.12.1"
