[package]
name = "snarkos-node-cdn"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A CDN client for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ "parallel" ]
locktick = [ "dep:locktick", "snarkvm/locktick" ]
parallel = [ "rayon" ]
cuda = [ "snarkvm/cuda" ]
metrics = [ "dep:snarkos-node-metrics" ]

[dependencies.anyhow]
workspace = true

[dependencies.bincode]
version = "1.0"

[dependencies.colored]
version = "2"

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.snarkos-node-metrics]
path = "../metrics"
version = "=3.8.0"
optional = true
features = [ "metrics" ]

[dependencies.rayon]
version = "1"
optional = true

[dependencies.reqwest]
version = "0.12"
features = [ "rustls-tls" ]

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dependencies.snarkvm]
workspace = true
features = [ "console", "ledger" ]

[dependencies.tokio]
workspace = true
features = [ "rt" ]

[dependencies.tracing]
version = "0.1"

[dev-dependencies.tokio]
workspace = true
features = [ "rt", "rt-multi-thread" ]

[dev-dependencies.tokio-test]
version = "0.4"

[package.metadata.cargo-machete]
ignored = ["serde"]
